@@ -1,3 +1,4 @@
 v0.0.1~dev
 - Drop it
 - Add series and movie artwork from Fanart.tv to the library
+- Add series artwork from TheTVDB
